Added bold and italic text with different headers and paragraphs. Also, added four lists, two unordered and two ordered.

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,7 +5,43 @@
         <title>My First Webpage</title>
     </head>
 
+    <!-- This is a comment. -->
     <body>
         <h1>Hello World!</h1>
+        <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis numquam amet hic rerum atque pariatur doloribus, ea minima debitis. Fugit sunt consequuntur reiciendis esse eveniet ab corporis facilis sed! Magnam.</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci accusamus esse mollitia fuga dignissimos veniam non voluptatibus distinctio earum sequi eius necessitatibus accusantium eos molestias tempore error, quibusdam nam! Dignissimos!</h3>
+        <p>Lorem ipsum, <strong>dolor sit amet</strong> consectetur adipisicing elit. <em>Repellat soluta</em> quo sequi odio, ratione itaque a quasi impedit et enim iusto explicabo, nemo eius nulla tempora est unde voluptatibus <strong><em>porro.</em></strong></p>
+
+        <ul>
+            <li>Kicking Chicken Seasoning</li>
+            <li>Cavatappi Noodles</li>
+            <li>Parmesean Cheese</li>
+            <li>Chicken Thighs</li>
+        </ul>
+
+        <ol>
+            <li>Get my shit together</li>
+            <li>Get my shit together</li>
+            <li>Get my shit together</li>
+            <li>Get my shit together</li>
+        </ol>
+
+        <ul>
+            <li>California</li>
+            <li>Spain</li>
+            <li>Switzerland</li>
+            <li>New Zealand</li>
+        </ul>
+
+        <ol>
+            <li>Scarface</li>
+            <li>Back To The Future</li>
+            <li>Inglorius Basterds</li>
+            <li>Berserk: The Golden Arc</li>
+        </ol>
+        
+        <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum earum sunt veritatis maxime inventore, hic officia voluptates autem ipsum reiciendis corrupti error non, itaque ipsa sequi veniam excepturi corporis vero!</h1>
+
+
     </body>
 </html>
