--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,5 +9,9 @@
         <h1>Homepage</h1>
         <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
         <a href="./pages/about.html">About</a>
+
+        <img
+        src="https://www.theodinproject.com/mstile-310x310.png">
+
     </body>
 </html>
