Added unordered list section on about.html.
This explains best practice for making commits.

--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -8,6 +8,15 @@
     <body>
         <h1>About Page</h1>
         <img
-        src="../images/dog.jpg">
+        src="../images/dog.jpg" alt="Charles the Pug" height="310" width="310">
+
+        <p>&ldquo; &rdquo; &lsquo; &rsquo;</p>
+
+        <h2>How to make a good commit message:</h2>
+        <ul>
+            <li>Provide a subject that specifies added code's actions.</li>
+            <li>Include a body that provides a concise yet clear description of why the commit needed to be made.</li>
+            <li>Lastly, ensure you separate the subject from the body with a new/blank line. This is a best practice format.</li>
+        </ul>
     </body>
 </html>
